[project]
name = "Fisheye effects"
description = "Provides tools for applying and removing fisheye lens effects from images."
version = "0.0.1"
license = {file = "LICENSE"}
dependencies = ["numpy>=1.22.0", "opencv-python>=4.8.0", "Pillow>=9.5.0"]

[project.urls]
Repository = "https://github.com/Kidev/ComfyUI-Fisheye-effects"
#  Used by Comfy Registry https://comfyregistry.org

[tool.comfy]
PublisherId = "kidev"
DisplayName = "ComfyUI-Fisheye-effects"
Icon = ""
